# dashboard

./: .clientrules  .dockerignore  .gitignore  CITATION.cff  ISSUE_RASTER_COORDINATE_MISMATCH.md  README.md  convert_excel.py  docker-compose-with-ollama.yml  docker-compose.prod.yml  docker-compose.yml  manifest.json  ollama-startup.sh  package.json  process_rasters.sh  test-r2-access.sh
.github/: copilot-instructions.md
app/: .gitignore  R2_SETUP.md  README.md  _example .env  bunfig.toml  mdsvex.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vercel.json  vite.config.ts
app/src/: app.html  (+1 more)
chat-backend/: .dockerignore  Dockerfile  Plan-EO_Dashboard_point_data.csv  README.md  backend_llms.py  compare_answers.py  config-chat.json  docker-compose.yml  explore_planeo_data.ipynb  main.py  requirements.txt  super_csv_agent.py
docker/: Dockerfile  nginx.conf
docs/: 502-bad-gateway-solution.md  DEPLOYMENT.md  FAIVOR-2024-08-31-1658.excalidraw  RESEARCHER-GUIDE.md  architecture.md  cloudflare-r2-integration.md  cog-integration.md  coolify-deployment.md  filter-raster-mapping.md  production-troubleshooting.md  r2-troubleshooting.md  raster-projections-guide.md
raster-data/: raster-layers.json
titiler-vercel/: .vercelignore  README.md  build.sh  deploy-alternate.sh  deploy-lambda.sh  deploy.sh  requirements-alt.txt  requirements.txt  setup.cfg  vercel-alt.json  vercel.json
titiler-vercel/.vercel/: project.json
titiler-vercel/api/: cog.py  handler.py  index.py  wrapper.sh
titiler-vercel/lambda/: handler.py  requirements.txt  vercel.json
(+194 files in other folders)
