[metadata]
name = titiler-vercel
version = 0.1.0
description = Titiler for Vercel Serverless Functions
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.9
install_requires =
    titiler.core>=0.11.0,<0.12.0
    titiler.application>=0.11.0,<0.12.0
    fastapi>=0.95.0,<0.96.0
    starlette>=0.26.0,<0.28.0
    uvicorn>=0.20.0,<0.23.0
    python-dotenv>=0.21.0
    rasterio>=1.3.0,<1.4.0
    rio-tiler>=4.1.0,<4.2.0
    rio-cogeo
    pydantic<2.0.0
    boto3

[options.packages.find]
exclude =
    tests
    *.tests
    *.tests.*
    tests.*